desktop view ready but there are other things to fix such as small desktop view and also the margin on tabs and small laptops and content texts - Ps: you shoud always work on smaller screens then move up

--- a/src/components/companies/companies.css
+++ b/src/components/companies/companies.css
@@ -10,3 +10,26 @@ footer .image-container img {
     height: 2.7rem;
     width: 2.7rem;
 }
+
+
+
+
+/* MEDIA QUERIES ================ ( For desktops ) ================ */
+
+
+
+@media screen and (min-width: 1024px) {
+    
+    footer {
+        margin-top: 7rem;
+    }
+
+    footer h5 {
+        font-size: 1rem;
+    }
+
+    footer .image-container img {
+        height: 3.2rem;
+        width: 3.2rem;
+    }
+}
