--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -69,47 +69,50 @@ p {
         display: grid;
         grid-template-areas:
         'one four'
-        'two four'
-        'three .';
-        margin-top: 0;
+        '.   four';
+        column-gap: 1rem;
+        margin-top: 3rem;
+    }
+
+    .h4-h1 {
+        margin-top: 6rem;
+        grid-area: one;
     }
     
 
     .image {
         display: inline-block;
         grid-area: four; 
+        margin-right: 1rem;
     }
 
     .image img {
-        width: 25rem;
-        height: 28rem;
+        width: 24rem;
+        height: 27rem;
     }
 
     h1 {
-        /* margin-bottom: 8rem; */
-        padding: 2rem 10rem 1rem 0rem;
-        font-size: 3.5rem;
+        padding: 1.5rem 12rem 0rem 0rem;
+        font-size: 3.4rem;
         text-align: start;
-        grid-area: two; 
+        line-height: 4.8rem;
         /* font-size: 3.1rem; */
     }
 
     p {
         text-align: start;
-        grid-area: three; 
         font-size: 1.1rem;
         padding-right: 20rem;
+        line-height: 1.8rem;
       /* font-size: 0.99em; */
     }
 
     h4 {
         margin: 0;
-        margin-top: 4rem;
         text-align: start;
         height: 3.2rem;
         width: 34rem;
         padding: 0.6rem 1rem 0.6rem 1rem;
-        grid-area: one; 
        
     }
 }
