--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,7 @@ html {
     .container {
         padding-top: 2%;
         margin: 1rem 1rem;
+        width: 98%;
     }
 
 }
